<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/soda_small"
    tools:context="ch.epfl.sweng.udle.DrinkActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="What would you like to Drink?"
        android:id="@+id/drinkTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/drinkNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Coca Cola"
        android:id="@+id/coca"
        android:layout_below="@+id/drinkTitle"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="44dp"

        />
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textSize="10dp"
        android:text="-"
        android:id="@+id/cocaMinus"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/drinkTitle"
        android:layout_marginTop="44dp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"

        android:background="@drawable/button_shape2"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>
    <TextView
        android:id="@+id/cocaNbr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:layout_alignBottom="@+id/cocaMinus"
        android:layout_toRightOf="@id/cocaMinus"/>
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textSize="10dp"
        android:text="+"
        android:id="@+id/cocaPlus"
        android:layout_alignBottom="@+id/cocaMinus"
        android:layout_toRightOf="@id/cocaNbr"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"

        android:background="@drawable/button_shape2"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>
    <TextView
        android:id="@+id/cocaTotal"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:editable="false"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/cocaMinus"
        android:layout_toRightOf="@id/cocaPlus" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Water"
        android:id="@+id/water"
        android:layout_below="@+id/coca"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="44dp" />
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textSize="10dp"
        android:text="-"
        android:id="@+id/waterMinus"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cocaMinus"
        android:layout_marginTop="44dp"/>
    <TextView
        android:id="@+id/waterNbr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:layout_alignBottom="@+id/waterMinus"
        android:layout_toRightOf="@id/waterMinus"/>
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textSize="10dp"
        android:text="+"
        android:id="@+id/waterPlus"
        android:layout_alignBottom="@+id/waterMinus"
        android:layout_toRightOf="@id/waterNbr" />
    <TextView
        android:id="@+id/waterTotal"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:editable="false"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/waterMinus"
        android:layout_toRightOf="@id/waterPlus" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Orangina"
        android:id="@+id/orang"
        android:layout_below="@+id/water"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="44dp" />
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textSize="10dp"
        android:text="-"
        android:id="@+id/orangMinus"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/waterMinus"
        android:layout_marginTop="44dp"/>
    <TextView
        android:id="@+id/orangNbr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:layout_alignBottom="@+id/orangMinus"
        android:layout_toRightOf="@id/orangMinus"/>
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textSize="10dp"
        android:text="+"
        android:id="@+id/orangPlus"
        android:layout_alignBottom="@+id/orangMinus"
        android:layout_toRightOf="@id/orangNbr" />
    <TextView
        android:id="@+id/orangTotal"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:editable="false"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/orangMinus"
        android:layout_toRightOf="@id/orangPlus" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Beer"
        android:id="@+id/beer"
        android:layout_below="@+id/orang"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="44dp" />
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textSize="10dp"
        android:text="-"
        android:id="@+id/beerMinus"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/orangMinus"
        android:layout_marginTop="44dp"/>
    <TextView
        android:id="@+id/beerNbr"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"

        android:layout_alignBottom="@+id/beerMinus"
        android:layout_toRightOf="@id/beerMinus"/>
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textSize="10dp"
        android:text="+"
        android:id="@+id/beerPlus"
        android:layout_alignBottom="@+id/beerMinus"
        android:layout_toRightOf="@id/beerNbr" />
    <TextView
        android:id="@+id/beerTotal"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:editable="false"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/beerMinus"
        android:layout_toRightOf="@id/beerPlus" />

</RelativeLayout>