<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ch.epfl.sweng.udle.activities.DeliveryActivity">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="83"
        android:id="@+id/Delivery_GoogleMaps"
        tools:context="ch.epfl.sweng.udle.MapActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <Button
        android:id="@+id/Delivery_CallDeliveryGuy"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/buttonCallDeliveryGuy"
        android:onClick="callDeliveryGuy"

        android:textAllCaps="false"
        android:textColor="@color/colorUdle"
        android:textSize="25sp"

        android:background="@drawable/button_shape2"
        />

</LinearLayout>
