<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llEnterCreditCardNumber"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_3sdp"
    tools:context="ch.epfl.sweng.udle.activities.EnterNumbersCreditCard">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        >

        <TextView
            android:textSize="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_height="wrap_content"
            android:text="Card number :"
            android:id="@+id/textView10" />

        <EditText
            android:paddingLeft="@dimen/_3sdp"
            android:inputType="numberPassword"
            android:layout_width="wrap_content"
            android:hint="enter your credit card numbers here"
            android:textColorHint="@color/greyColor"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/payment_cardNumber"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/_1sdp">

        <LinearLayout
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Expiracy date :"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/textView11" />

        <EditText
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:hint="0119"
            android:inputType="number"
            android:textColorHint="@color/greyColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/payment_expDate"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="right"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:paddingLeft="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:text="Security number :"
            android:inputType="number"
            android:id="@+id/textView12" />

        <EditText
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/payment_securityNumber"
            android:inputType="number"
            android:hint="935"
            android:textColorHint="@color/greyColor"
             />
    </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/validateNewCreditCard"
        android:text="@string/Validate"
        android:textAllCaps="false"
        android:textColor="@color/colorUdle"
        android:textSize="25sp"

        android:background="@drawable/button_shape2"
        />
</LinearLayout>
</RelativeLayout>