...


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pay"
        android:id="@+id/button_payment_confirm"
        android:layout_gravity="center_horizontal"
        android:onClick="payment_button_click"
        android:textAllCaps="false"
        android:textColor="@color/colorUdle"
        android:textSize="25sp"
        android:background="@drawable/button_shape2"
...
